--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -1,4 +1,22 @@
-@import url('https://fonts.googleapis.com/css?family=Lato:400,700');
+@font-face {
+    font-family: 'Open Sans';
+    font-weight: 400;
+    font-style: normal;
+    font-display: swap;
+    unicode-range: U+000-5FF;
+    src: local('Open Sans'),
+        url('/assets/fonts/Montserrat-Regular.ttf') format('ttf');
+}
+
+@font-face {
+    font-family: 'Open Sans';
+    font-weight: 700;
+    font-style: normal;
+    font-display: swap;
+    unicode-range: U+000-5FF;
+    src: local('Open Sans'),
+        url('/assets/fonts/Montserrat-Bold.ttf') format('ttf');
+}
 
 *,
 *::before,
@@ -24,7 +42,7 @@ html {
 }
 
 body {
-    font-family: 'Lato', sans-serif;
+    font-family: 'Open Sans', sans-serif;
     color: #293347;
     font-size: 1.6rem;
 }
