Changed minor things

--- a/assets/sass/_typography.scss
+++ b/assets/sass/_typography.scss
@@ -8,7 +8,7 @@
         display: block;
         width: 3rem;
         height: 3px;
-        background-color: $dark;
+        background-color: $dark-blue;
         margin: 0 auto;
     }
 }
