Changed project component style

--- a/assets/sass/components/_contact.scss
+++ b/assets/sass/components/_contact.scss
@@ -10,10 +10,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 20rem 0;
-    margin-top: 4rem;
+    padding: 25rem 0;
 }
 
 .section-contact {
-    padding: 6rem 0 0 0;
+    padding: 0;
 }
