--- a/assets/sass/components/_navigation.scss
+++ b/assets/sass/components/_navigation.scss
@@ -15,7 +15,7 @@
             opacity: 0;
             flex-direction: column;
             position: fixed;
-            top: 8rem;
+            top: $nav-height;
             left: 0;
             right: 0;
             background-color: $nav;
