--- a/assets/sass/components/_header.scss
+++ b/assets/sass/components/_header.scss
@@ -5,7 +5,7 @@
     right: 0;
     background-color: $nav;
     z-index: 20;
-    height: 8rem;
+    height: $nav-height;
     box-shadow: 3px 0 3px 0 rgba(#000, 0.1);
 
     &__content {
