--- a/assets/sass/components/_skill.scss
+++ b/assets/sass/components/_skill.scss
@@ -2,14 +2,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: $grey;
+    border: 1px solid $grey;
     padding: 3rem;
     border-radius: 5px;
     box-shadow: 3px 3px 5px 0 rgba(#000, 0.1);
-    transition: transform 0.2s;
+    transition: transform 0.3s ease-in-out;
+    backface-visibility: hidden;
 
     &:hover {
-        transform: scale(1.03, 1.03);
+        transform: translateY(-1rem) scale(1.026, 1.026);
     }
 
     &__heading {
